--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,9 @@
     <title>Memory Game App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="site-wrap">
+      <div id="root"></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
